--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-Documentation: https://zzhu1372.github.io/metilene3-doc
+# **metilene<sup>3**: Identifying DMRs Across Multiple Conditions with Auto-Classification
+
+metilene<sup>3</sup> is a computational tool to identify Differentially Methylated Regions (DMRs) across multiple groups (supervised) or samples (unsupervised). With the identified DMRs, metilene<sup>3</sup> enables inference of epigenetic relationships by constructing a Differentially Methylated Tree (DMTree), which can also be used for sample clustering.
+
+Please see the [metilene<sup>3</sup>-doc](https://zzhu1372.github.io/metilene3-doc) for more details.
+
+![alt text](https://zzhu1372.github.io/metilene3-doc/fig/framework.png "framework")
